--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1"
   }
 }
